Fixing scrollbar styles

--- a/CSS/Aside.css
+++ b/CSS/Aside.css
@@ -1,5 +1,9 @@
 aside {
 	height: 100vh;
+	position: sticky;
+	position: -webkit-sticky;
+	top: 0;
+	left: 0;
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
@@ -19,6 +23,7 @@ aside section {
 	gap: 16px;
 	position: relative;
 	z-index: 2;
+	overflow-y: auto;
 }
 
 aside footer {
