--- a/CSS/Newsfeed.css
+++ b/CSS/Newsfeed.css
@@ -1,3 +1,12 @@
+article {
+	position: sticky;
+	position: -webkit-sticky;
+	top: 0;
+	right: 0;
+	height: 100vh;
+	overflow-y: auto;
+}
+
 article,
 .trending-info,
 .follow-info {
